Bootstrap datepicker z-index fix

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -921,7 +921,7 @@ body {
 }
 
 .datepicker.datepicker-dropdown.dropdown-menu {
-  z-index: 1050 !important;
+  z-index: 1080 !important;
 }
 
 #background-image {
